<resources>
    <string name="app_name">Questionnaire</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="todo">TODO</string>
    <string name="post">Post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_up">SignUp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account_to_get_started">Create an account to get started.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="creating_an_account_means_you_re_ok_with_our_terms_of_service_and_our_privacy_policy">Creating an account means you\'re ok with our Terms of Service and our privacy policy</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="ask_your_question">Ask your question..</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="dashboard">Dashboard</string>
    <string name="change_profile">Change Profile</string>
    <string name="my_questions">My Questions</string>
    <string name="upload_image">Upload Image</string>
    <string name="date">Date</string>
    <string name="my_answers">My Answers</string>
    <string name="log_out">Log Out</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="recommendation">Recommendation</string>
    <string name="comment">Comment</string>
    <string name="discover">Discover</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="view_profile">View Profile</string>
    <string name="download">Download</string>
    <string name="refresh">Refresh</string>
    <string name="no_data">NO DATA</string>
    <string name="change_image">Change Image</string>
    <string name="update">Update</string>
    <string name="edit_question">Edit Question</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="summary">Summary</string>
    <string name="add_bio">Add Bio</string>
    <string name="bio">Bio</string>
    <string name="hey_welcome">Hey! Welcome</string>
    <string name="get_started">Get Started</string>
    <string name="log_in">Log IN</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="sign_in_here">Sign In here..</string>
    <string name="hello_admin">Hello Admin!</string>
    <string name="discover_people">Discover People</string>
    <string name="add_friend">Add Friend</string>
    <string name="top_recommendations">Top Recommendations</string>
    <string name="are_you_sure_want_to_log_out">Are you sure want to Log Out</string>
    <string name="specialist_in">Specialist In</string>
    <string name="add_specialization">Add Specialization</string>
    <string name="are_you_sure_want_to_exit_this_app">Are you sure want to exit this App?</string>
    <string name="lend_a_hand_to_other_students_and_get_sharing_your_knowledge">Lend a hand to other students and get sharing your knowledge</string>
    <string name="_0">0</string>
    <string name="give_answer">Give Answer</string>
    <string name="take_picture">Take Picture</string>
    <string name="scan_text">Scan Text</string>
    <string name="upload">Upload</string>
    <string name="tap_and_ask_it_out_loud">Tap and ask it out loud</string>
    <string name="category">Category</string>
    <string name="subject">Subject</string>
    <string name="ask_now">Ask Now</string>
    <string name="post_your_question"><u>Ask!!!</u></string>
    <string name="step_by_step_explanation">Step-by-step explanation:</string>
    <string name="answer">Answer:</string>
    <string name="write_your_explanation_here">Write your explanation here.</string>
    <string name="write_your_answer_here">Write your answer here.</string>
    <string name="description">Description</string>
    <string name="saved_questions">Saved Questions</string>
    <string name="bookmarks">Bookmarks</string>
</resources>