<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Fragments.CommentFragment">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="27dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="16dp"
            app:srcCompat="@drawable/ic_baseline_back_24"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/questionImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@color/greyish_white"
            android:visibility="gone"
            android:maxHeight="180dp"
            android:scaleType="fitCenter"
            android:src="@drawable/placeholder"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/questionTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:text=""
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:textColor="@color/appColor"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_margin="@dimen/_10sdp" />

        <EditText
            android:id="@+id/answerEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:hint="@string/write_your_answer_here"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="serif"
            android:autofillHints=""
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_by_step_explanation"
            android:textStyle="bold"
            android:textColor="@color/appColor"
            android:textSize="16sp"
            android:layout_margin="@dimen/_10sdp" />

        <EditText
            android:id="@+id/explanationEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:hint="@string/write_your_explanation_here"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="serif"
            android:autofillHints=""
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/answerBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@drawable/button_bg_2"
            android:backgroundTint="@color/appColor"
            android:text="@string/give_answer"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>
