<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Fragments.MyProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:weightSum="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.85"
            android:text="@string/profile"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/_20sdp"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:textSize="21sp"/>

        <TextView
            android:id="@+id/tvEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/edit"
            android:layout_weight="0.15"
            android:gravity="center"
            android:fontFamily="serif"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="@dimen/_75sdp"
                    android:layout_height="@dimen/_75sdp"
                    android:src="@drawable/man"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/upload_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/camera_src"
                    android:padding="@dimen/_1sdp"
                    android:background="@drawable/button_bg"
                    android:backgroundTint="@color/greyish_white"
                    app:layout_constraintEnd_toEndOf="@+id/profile_image"
                    app:layout_constraintTop_toTopOf="@+id/profile_image" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Roshan Jha"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="roshanjha7053@gmail.com"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/appColor"/>

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey"
                android:layout_marginTop="@dimen/_15sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginLeft="@dimen/_5sdp"
                android:fontFamily="serif"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginTop="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:textSize="16sp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:text="Add Description"/>

            <View
                android:id="@+id/view6"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey"
                android:layout_marginTop="@dimen/_15sdp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/myQuestionTxt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:padding="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="serif"
                    android:text="@string/my_questions"
                    android:textSize="21sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/savedQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:drawablePadding="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:text="@string/saved_questions"
                android:drawableTint="@color/appColor"
                android:textSize="19sp"
                app:drawableStartCompat="@drawable/ic_baseline_bookmark_added_24" />

            <TextView
                android:id="@+id/recommendation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:drawablePadding="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:text="@string/recommendation"
                android:textSize="19sp"
                app:drawableStartCompat="@drawable/ic_baseline_people_24" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:drawablePadding="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/log_out"
                android:textSize="19sp"
                app:drawableStartCompat="@drawable/ic_baseline_exit_to_app_24" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>